--- a/estilo_pág1.css
+++ b/estilo_pág1.css
@@ -3,23 +3,49 @@ body{
     background-size: 100%;
     background-repeat: no-repeat;
 }
-.bau{
+.posicao_maldivas{
     width: 100%;
+    height: 50%;
+}
+.alinhamento_link1{
+    height: 100%;
     display: flex;
-    align-content: middle;
-
+    justify-content: center;
 }
-
-.link1{
+#link_pag2{
+    font-size: 35px; 
+    color: #02070c;
     text-decoration: none;
-    color: #E0C8E0;
-    border: 3px solid #BACAE0;
+    background-color: #a6b7ee;
+    border: 5px solid #87d3ad;
     border-radius: 7px; 
-    align-items: center;
 }
-.link2{
+.text_introducao{
+    color: #c7dfd1;
+    line-height: 30px;
+    word-spacing: 7px;
+    text-align: center;
+}
+.alinhamento_link2{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.posicao_economia{
+    width: 100%;
+    height: 50%;
+}
+#link_pag3{
+    font-size: 35px; 
+    color: #02070c;
     text-decoration: none;
-    color: #E0C8E0;
-    border: 3px solid #BACAE0;
-    border-radius: 7px
+    background-color: #a6b7ee;
+    border: 5px solid #87d3ad;
+    border-radius: 7px; 
+}
+.text_economia{
+    color: #c7dfd1;
+    line-height: 30px;
+    word-spacing: 7px;
+    text-align: center;
 }
