--- a/estilo_pág1.css
+++ b/estilo_pág1.css
@@ -1,6 +1,9 @@
 body{
+    background: #03501d;
+}
+.Ilhas_Maldivas{ 
+    border-radius: 50%;
     background-image: url(img/Design\ sem\ nome.png);
-    background-size: 100%;
     background-repeat: no-repeat;
 }
 .posicao_maldivas{
@@ -21,10 +24,12 @@ body{
     border-radius: 7px; 
 }
 .text_introducao{
-    color: #c7dfd1;
+    color: #080808;
     line-height: 30px;
     word-spacing: 7px;
     text-align: center;
+    font-size: 24px;
+    padding-bottom: 185px;
 }
 .alinhamento_link2{
     height: 100%;
@@ -32,8 +37,10 @@ body{
     justify-content: center;
 }
 .posicao_economia{
-    width: 100%;
-    height: 50%;
+    padding-top: 185px;
+    background-image: url(img/ilhas_maldivas_economia.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 #link_pag3{
     font-size: 35px; 
@@ -44,8 +51,9 @@ body{
     border-radius: 7px; 
 }
 .text_economia{
-    color: #c7dfd1;
+    color: #080808;
     line-height: 30px;
     word-spacing: 7px;
     text-align: center;
+    font-size: 24px;
 }
