--- a/estilo_pág2.css
+++ b/estilo_pág2.css
@@ -4,6 +4,9 @@
     font-family: 'Inter', sans-serif;
     font-family: 'Noto Sans Sundanese', sans-serif;
 }
+body{
+    background-color: rgb(233, 228, 221);
+}
 .Titulo{
     background-color: #56c4e6;
     text-align: center;
@@ -26,9 +29,6 @@
     display: flex;
     justify-content: center;
 }
-.introducao{
-    background-color: rgb(233, 222, 209);    
-}
 .imagem{
     display: flex;
     justify-content:space-between;
@@ -36,4 +36,89 @@
 .imagem img{
     width: 500px;
     height: 350px;
+}
+.introducao{
+    background-color: rgb(233, 222, 209);
+    text-align: center;    
+}
+.titulo_introducao{
+    text-align: left;
+}
+.imagens_introducao{
+    display: flex;
+    justify-content:space-between;
+}
+.imagens_introducao img{
+    width: 500px;
+    height: 350px;
+}
+.lugar{
+    background-color: rgb(215, 250, 250);
+}
+.lugar_malé{
+    display: flex;
+    justify-content:space-between;
+}
+.lugar_malé img{
+    width: 500px;
+    height: 350px;
+}
+.lugar_hulhumale{
+    display: flex;
+    justify-content:space-between;
+}
+.lugar_hulhumale img{
+    width: 500px;
+    height: 350px;
+}
+.lugar_thulusdhoo{
+    display: flex;
+    justify-content:space-between;
+}
+.lugar_thulusdhoo img{
+    width: 500px;
+    height: 350px;
+}
+
+.culinaria{
+    background-color: rgb(248, 210, 209);
+}
+.comida_garudhiya{
+    display: flex;
+    justify-content:space-between;
+}
+.comida_garudhiya img{
+    width: 500px;
+    height: 350px;
+}
+.comida_kulhi{
+    display: flex;
+    justify-content:space-between;
+}
+.comida_kulhi img{
+    width: 500px;
+    height: 350px;
+}
+.comida_lagosta{
+    display: flex;
+    justify-content:space-between;
+}
+.comida_lagosta img{
+    width: 500px;
+    height: 350px;
+}
+
+.historia{
+    background-color: bisque;
+}
+.imagens_historia{
+    display: flex;
+    justify-content:space-between;
+}
+.imagens_historia img{
+    width: 500px;
+    height: 350px;
+}
+.mais{
+    background-color: rgb(190, 228, 228);
 }
