--- a/CSS/estilo_pág1.css
+++ b/CSS/estilo_pág1.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(img/Design\ sem\ nome.png);
+    background-image: url(/img/Maldivas_imagem\ _inicial.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
